{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 220,
  "lineage": "bcf727df-68e3-9374-175d-7ae1a9cc324b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371676301813:security-group/sg-0f9c6113cb21da60d",
            "description": "Allow http inbound traffic to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9c6113cb21da60d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_elb",
            "name_prefix": null,
            "owner_id": "371676301813",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01840c5d6037cf851"
          },
          "dependencies": [
            "aws_vpc.exp_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371676301813:security-group/sg-054f67666e9f72b1d",
            "description": "Allow http inbound traffic to rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054f67666e9f72b1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06510f20bb37216db"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-rds",
            "name_prefix": null,
            "owner_id": "371676301813",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01840c5d6037cf851"
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_vpc.exp_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371676301813:security-group/sg-06510f20bb37216db",
            "description": "Allow http inbound traffic from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06510f20bb37216db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9c6113cb21da60d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_http_web",
            "name_prefix": null,
            "owner_id": "371676301813",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01840c5d6037cf851"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.exp_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exp_test_subnet_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371676301813:subnet/subnet-0e4a4c5c012fa0749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-0e4a4c5c012fa0749",
            "map_public_ip_on_launch": false,
            "owner_id": "371676301813",
            "tags": {
              "Name": "tf-exp-test-subnet-priv"
            },
            "vpc_id": "vpc-01840c5d6037cf851"
          },
          "dependencies": [
            "aws_vpc.exp_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exp_test_subnet_priv2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371676301813:subnet/subnet-0f575f6c9f79049ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.11.0/24",
            "id": "subnet-0f575f6c9f79049ac",
            "map_public_ip_on_launch": false,
            "owner_id": "371676301813",
            "tags": {
              "Name": "tf-exp-test-subnet-priv"
            },
            "vpc_id": "vpc-01840c5d6037cf851"
          },
          "dependencies": [
            "aws_vpc.exp_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exp_test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371676301813:vpc/vpc-01840c5d6037cf851",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-007fcfbbef7730ad0",
            "default_route_table_id": "rtb-02b5211de61c7a112",
            "default_security_group_id": "sg-06ac62f94e7441f9b",
            "dhcp_options_id": "dopt-8c7703f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01840c5d6037cf851",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b5211de61c7a112",
            "owner_id": "371676301813",
            "tags": {
              "Name": "tf-exp-test"
            }
          }
        }
      ]
    }
  ]
}